--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Transparent Login Form UI</title>
+    <title>Attendance</title>
     <link rel="stylesheet" href="style1.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
