--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style1.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
-  <body>
+  <body  oncopy="return false;" onpaste="return false;" oncut="return false;">
     <div class="bg-img">
       <div class="content">
         <header>Attendance Form</header>
-        <form action="" name="Studentdata" id="Studentdata">
+        <form action="" name="Studentdata" id="Studentdata"   runat="server">
           <div class="field">
             <span class="fa fa-user"></span>
             <input
