--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Attendance</title>
+	  <script>
 	  if (document.referrer.indexOf("https://bikash7015.github.io/attendance-qr-scanner/") === -1) {
     window.location.replace("https://bikash7015.github.io/attendance-qr-scanner/");
 }
+	  </script>
     <link rel="stylesheet" href="style1.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
